# projeto-pim-sistema-estudantil

./: .gitignore  EXECUTAR.bat  Executar.cmd  Instalar.bat  README.md  config.py  contexto.py  dados.py  email_tools.py  gemini_api.py  login_interface.py  main.py  paths.py  pyproject.toml  seguranca.py  telalogin.py  todo.md  uv_guide.txt
files/: usuarios.json
telas/: __init__.py  alterar_senha_admin.py  alterar_senha_colaborador.py  interface_atividades_prof.py  interface_cadastro.py  interface_cadastro_aluno.py  interface_cadastro_colaborador.py  interface_cadastro_turma.py  interface_edicao.py  interface_edicao_aluno.py  interface_edicao_colaborador.py  interface_edicao_turma.py  interface_inteligencia.py  interface_login.py  utils_tk.py
