[project]
name = "projeto-pim-sistema-estudantil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "cryptography>=46.0.2",
    "dotenv>=0.9.9",
    "pyperclip>=1.11.0",
    "tkcalendar>=1.6.1",
    "ttkbootstrap>=1.18.0",
]
